@@ -1946,3 +1946,6 @@ Introduced new Hessian-based error control in irradiance caching (ambient)
 calculation.  Since the format of the stored ambient values is different,
 the old files will be rejected with an error message and must be removed.
 The programs may be compiled with the -DOLDAMB option if this is a problem.
+
+Added -p option to rcontrib to set function file parameters on a per-modifier
+basis to simplify bin evaluation.
